--- a/tf2/motd/motd.html
+++ b/tf2/motd/motd.html
@@ -7,7 +7,7 @@
     <title>motd</title>
 </head>
 <body>
-    <p>pikko's little shop of horror</p>
+    <h1>pikko's little shop of horror</h1>
     <p><img src="terrinyeh.jpg"></p>
 </body>
 </html>
